--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ Version: 0.0.1.1
 Author: Arild, EM
 Description: Effectiv Marketing Theme for affiliates. 
 Text Domain: Emtheme
+Domain Path: /languages
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
