--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -29,9 +29,13 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 .emtheme-documentation {
 	margin: 50px 0 0 50px;
 	height: 300vh;
+	width: 50%;
+	font-size: 16px;
 }
 
-.emtheme-documentation h2 {
+.emtheme-documentation h2,
+.emtheme-documentation h3,
+.emtheme-documentation h4 {
 	margin: 0;
 }
 
