--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -71,3 +71,15 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 	list-style-type: lower-roman;
 }
 
+#customize-control-theme_footer-active::before {
+	content: 'Footer Info';
+	display: block;
+	font-size: 20px;
+	font-weight: bold;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+#customize-control-theme_footer-active label {
+	font-weight: bold;
+}
