--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -71,8 +71,12 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 	list-style-type: lower-roman;
 }
 
+/*
+	Customizer Pane	
+ */
+#customize-control-emtheme_color-navbar_bg_top::before,
+#customize-control-emtheme_color-submenu_bg::before,
 #customize-control-theme_footer-active::before {
-	content: 'Footer Info';
 	display: block;
 	font-size: 20px;
 	font-weight: bold;
@@ -80,6 +84,25 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 	margin-bottom: 10px;
 }
 
+#customize-control-theme_footer-active::before {
+	content: 'Footer Info';
+}
+
 #customize-control-theme_footer-active label {
 	font-weight: bold;
+}
+
+
+#customize-control-emtheme_color-navbar_bg_top::before {
+	content: 'NAV COLORS\A\ANavbar';
+	/*display: block;
+	font-size: 20px;
+	font-weight: bold;
+	margin-top: 30px;
+	margin-bottom: 10px;*/
+	white-space: pre;
+}
+
+#customize-control-emtheme_color-submenu_bg::before {
+	content: 'Sub-menu';
 }
