--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -61,10 +61,10 @@ body {
 }
 
 .emtheme-header-title {
-	font-size: 4rem;
+	/*font-size: 4rem;*/
 }
 .emtheme-header-tagline {
-	font-size: 1.6rem;
+	/*font-size: 1.6rem;*/
 }
 
 .emtheme-header-search {
