--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -78,6 +78,8 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 	text-transform: capitalize;
 }
 
+#customize-control-emtheme_color-footer_bg::before,
+#customize-control-background_color::before,
 #customize-control-emtheme_color-emtop_bg::before,
 #customize-control-emtheme_font-content_lineheight::before,
 #customize-control-emtheme_font-title_family::before,
