--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -128,7 +128,7 @@ body {
 .main {
 	/*margin: 2rem auto auto; */
 	/*font-size: 1.6rem;*/
-	/*margin-bottom: auto !important;*/
+	margin-bottom: auto;
 	/*height: 300vh;*/
 }
 
