--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 /*
 Theme Name: (NY) EM Theme
-Version: 0.0.1.1
+Version: 0.0.1.2
 Author: Arild, EM
 Description: Effectiv Marketing Theme for affiliates. 
 Text Domain: Emtheme
 Domain Path: /languages
+GitHub Theme URI: zeah/EM-theme
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
