--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -81,6 +81,9 @@ body {
 .navbar-container {
 	display: flex;
 	align-items: center;
+
+	/*flex-wrap: wrap;*/
+	/*overflow: hidden;*/
 	/*margin-right: auto;*/
 	/*justify-items: left;*/
 }
@@ -90,6 +93,24 @@ body {
 	margin-right: auto;
 	/*margin-bottom: 2rem;*/
 }
+
+.navbar-logo {
+	display: block;
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	/*flex: 1;*/
+	/*width: 3rem;*/
+}
+
+/*.navbar-logo > a {
+	height: 100%;
+}
+
+.navbar-logo img {
+	height: 100% !important;
+	width: auto !important;
+}*/
 
 /* if description on links is added through menu customizer */
 .emtheme-navbar-description {
