--- a/assets/css/admin/editor.css
+++ b/assets/css/admin/editor.css
@@ -1,3 +1,21 @@
 body {
 	/*font-family: "Roboto" !important;*/
 }
+
+.alignright {
+	float: right;
+	margin-left: 20px;
+}
+
+.alignleft {
+	float: left;
+	margin-right: 20px;
+}
+
+.aligncenter {
+	margin: auto;
+}
+
+.wp-caption-dd {
+	margin: 0;
+}
