--- a/assets/css/pub/theme-mobile.css
+++ b/assets/css/pub/theme-mobile.css
@@ -13,20 +13,37 @@ body {
 
 
 .navbar-background {
-	position: relative;
-	display: flex;
+	align-self: stretch;
+	/*position: relative;*/
+	/*display: flex;*/
 
-	/*justify-content: space-between;*/
-	align-items: center;
+	/*align-items: center;*/
 }
 
-/*.navbar-background::after {*/
-	/*content: 'hi';*/
-	/*color: white;*/
-	/*display: none;*/
-/*}*/
+.navbar-container {
+	display: flex;
+	position: relative;
+}
+
+.navbar-identity {
+	display: flex;
+	align-items: center;
+	margin-right: auto;
+}
+
+.navbar-logo {
+	margin-right: 1rem;
+}
+
+.custom-logo {
+	display: block;
+}
 
 .navbar-container {
+	/*display: flex;*/
+}
+
+.navbar-menu {
 	display: none;
 	position: absolute;
 	top: 46px;
@@ -35,25 +52,33 @@ body {
 	width: 100vw;
 }
 
-.navbar-container-show {
+.navbar-menu-show {
 	display: flex;
 	flex-direction: column-reverse;
 }
 
-.menu-container {
+/*.menu-container {
 	z-index: 99;
 	position: static;
 	
+}*/
+
+.navbar-search {
+	display: flex;
+	align-items: center;
+	z-index: 100;
 }
 
 .emtheme-search-form {
+	flex: 1;
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-end;
 	margin: 20px 0;
 }
 
 .emtheme-search-input {
 	margin-left: 7px;
+	flex: 1;
 }
 .emtheme-search-input:focus {
 	outline: none;
@@ -64,12 +89,19 @@ body {
 	margin-right: 7px;
 }
 
+.emtheme-mobile-arrow {
+	display: flex;
+	align-items: center;
+}
 
 .menu-list {
 	flex-direction: column;
 	z-index: 99;
 }
 
+.menu-link {
+	padding: 1.5rem;
+}
 .menu-has-child {
 	display: flex;
 	justify-content: space-between;
@@ -83,6 +115,11 @@ body {
 .sub-menu {
 	order: 3;
 	width: 100vw;
+}
+
+.emtheme-navbar-description {
+	position: absolute;
+	right: 10px;
 }
 
 /*.menu-container::before {
