--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -34,34 +34,49 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 }
 
 
-.emtheme-seo-container {
-	display: flex;
-	justify-content: space-around;
-	font-size: 16px;
+@media only screen and (min-width: 1280px) {
+
+	.emtheme-seo-container {
+		display: flex;
+		justify-content: space-around;
+		font-size: 16px;
+	}
+
+	.emtheme-seo-container > div > div {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		margin: 5px 0;
+	}
+
+	.emtheme-seo-container input[type="text"] {
+		margin-left: 10px;
+	}
+
+	.emtheme-seo-container input[type="checkbox"] {
+		/*float: right;*/
+
+		position: relative;
+		top: 6px;
+	}
+
+	.emtheme-seo-crawlers {
+		font-size: 16px;
+		margin-bottom: 10px;
+	}
 }
+@media only screen and (max-width: 1279px) {
 
-.emtheme-seo-container > div > div {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	.emtheme-seo-container > div {
+	}
 
-	margin: 5px 0;
-}
+	.emtheme-seo-container > div > div {
+		margin-bottom: 30px;
+		display: flex;
+		justify-content: space-between;
+	}
 
-.emtheme-seo-container input[type="text"] {
-	margin-left: 10px;
-}
-
-.emtheme-seo-container input[type="checkbox"] {
-	/*float: right;*/
-
-	position: relative;
-	top: 6px;
-}
-
-.emtheme-seo-crawlers {
-	font-size: 16px;
-	margin-bottom: 10px;
 }
 
 /* emtheme documention page */
