--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -131,6 +131,7 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 	text-transform: capitalize;
 }
 
+#customize-control-theme_notfound-text::before,
 #customize-control-emtheme_color-goup_bg::before,
 #customize-control-emtheme_color-footer_bg::before,
 #customize-control-background_color::before,
